tests/ui/match/ref-mut-inside-ref-not-pattern-mutability-cap-violated.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/ref-mut-inside-ref-not-pattern-mutability-cap-violated.rs:4:21
   |
LL |   if let &Some(Some(x)) = &Some(&mut Some(0)) {}
   |                     ^ cannot borrow as mutable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
